--- a/index.html
+++ b/index.html
@@ -3,22 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MY FIRST PAGE</title>
+    <title>SHOPISTA</title>
+    <link rel="stylesheet" href="design.css">
 </head>
 <body>
-    <div>
-        <h1>Namita's first page</h1>
-    </div>
-    <p> hello everyone </p>
-    <b>good night</b>
-    <i> italic </i>
-    <img src="kausani.png" alt="img-not-available">
-    <form>
-        Name: <input type="text">
-        phone: <input type="number">
-        <select>
-            <option value="maths"> Maths: </option>
-        </select>
-    </form>
+    <header>
+
+        <div class="container">
+         <nav>
+            <img src="lgo.png" height="30px" width="50px">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Category</a></li>
+                <li><a href="">contact us</a></li>
+            
+            </ul>
+            <button>Sign in</button>
+         </nav>
+        </div>
+
+    </header>
+    <main>
+    <section class="main-class">
+        <h1>Hii guys</h1>
+        <h2>this is the first webpage.</h2>
+    </section>
+   
+    </main>
+    <footer class="footer">
+        <h1><a href="">Contact Us</a></h1>
+        <a href=""></a><img src="" height="40px" width="40px"></a>
+    </footer>
+
+
+    
 </body>
 </html>
