--- a/form.html
+++ b/form.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>form</title>
+    <style>
+    img{
+       display: block;
+       margin-left: auto;
+       margin-right: auto;
+       height: 150px;
+       width: 400px;
+    }  
+    form{
+        margin-left: 50px;
+    }
+    </style>
+    
 </head>
 <body>
+    <img src="https://www.databricks.com/sites/default/files/images/Deloitte-Logo.png?v=1682374538" alt="img" >
     <form>
         <div>
        <strong><u>NAME: </u></strong> &nbsp; <input type="text" id="myname">
